chore: registered channel and specified the appropriate foreground service types.

--- a/examples/bridgefy-alerts/app/src/main/AndroidManifest.xml
+++ b/examples/bridgefy-alerts/app/src/main/AndroidManifest.xml
@@ -36,12 +36,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        >
+        android:enableOnBackInvokedCallback="true"
+        tools:targetApi="tiramisu">
         <service
             android:name="me.bridgefy.example.android.alerts.service.BridgefyService"
             android:enabled="true"
             android:exported="false"
-            android:stopWithTask="false"/>
+            android:stopWithTask="false"
+            android:foregroundServiceType="remoteMessaging"/>
         <!-- support 18:9 form factors -->
         <meta-data
             android:name="android.max_aspect"
